--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:text-align="http://www.w3.org/1999/xhtml">
 <head>
   <title>Scraping Project</title>
   <meta charset="utf-8">
@@ -14,18 +14,19 @@
     <a class="navbar-brand" href="/">Scraping Poject Homepage</a>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="/scraping_detik">detik.com</a>
+        <a class="nav-link active" href="/scraping_detik">Detik Terpopuler</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Next</a>
+        <a class="nav-link active" href="/idr_rates">IDR Rates</a>
       </li>
     </ul>
   </div>
 </nav>
 
-<div class="container-fluid mt-3">
-  <h3>Scraping Project</h3>
-  <p>This site will host several of my scraping project.</p>
+<div class="container-fluid mt-3" style="text-align:center">
+  {% block body %}
+
+  {% endblock %}
 </div>
 
 </body>
