--- a/templates/idr_rates.html
+++ b/templates/idr_rates.html
@@ -1,6 +1,7 @@
 {% extends 'index.html' %}
 
 {% block body %}
+  <h1>IDR Exchange Rates</h1>
   <table class="table table-dark table-striped">
     <thead>
       <tr>
