--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,8 @@
       <li class="nav-item">
         <a class="nav-link active" href="/idr_rates">IDR Rates</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="/carousell">Popular Camera</a>
     </ul>
   </div>
 </nav>
