--- a/templates/index.html
+++ b/templates/index.html
@@ -14,13 +14,13 @@
     <a class="navbar-brand" href="/">Scraping Poject Homepage</a>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="/scraping_detik">Detik Terpopuler</a>
+        <a class="nav-link active" href="/scraping_detik">detik.com</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="/idr_rates">IDR Rates</a>
+        <a class="nav-link active" href="/idr_rates">floatrates.com</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="/carousell">Popular Camera</a>
+        <a class="nav-link active" href="/carousell">id.carousell.com</a>
     </ul>
   </div>
 </nav>
