--- a/templates/carousell.html
+++ b/templates/carousell.html
@@ -1,16 +1,18 @@
 {% extends 'index.html' %}
 
 {% block body %}
-<div class="container mt-3">
-  <h1>List of Items in Photography (Scraping From id.carousell.com)</h1>
-  {% for data in datas %}
-    <div class="card" style="width:400px">
-      <img class="card-img-top" style="width:100%" src="{{ data['source']|safe }}"></img>
-      <div class="card-body">
-        <p href="{{data['titlelink']|safe}}" class="card-text">{{ data['title']|safe }}</p>
+<h1>List of Items in Photography (Scraping From id.carousell.com)</h1>
+<div class="row row-cols-1 row-cols-md-3 g-4">
+    {% for data in datas %}
+      <div class="col">
+        <div class="card" style="width:400px">
+          <img class="card-img-top" style="width:100%" src="{{ data['source']|safe }}"></img>
+          <div class="card-body">
+            <p href="{{data['titlelink']|safe}}" class="card-text">{{ data['title']|safe }}</p>
+          </div>
+        </div>
+        <br>
       </div>
-    </div>
-  {% endfor %}
-  <br>
+    {% endfor %}
 </div>
 {% endblock%}
