--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
   </div>
 </nav>
 
-<div class="container-fluid mt-3" style="text-align:center">
+<div class="container-fluid mt-3 justify-content-center" style="text-align:center">
   {% block body %}
 
   {% endblock %}
