--- a/templates/carousell.html
+++ b/templates/carousell.html
@@ -2,17 +2,16 @@
 
 {% block body %}
 <h1>List of Items in Photography (Scraping From id.carousell.com)</h1>
-<div class="row row-cols-1 row-cols-md-3 g-4">
     {% for data in datas %}
-      <div class="col">
         <div class="card" style="width:400px">
           <img class="card-img-top" style="width:100%" src="{{ data['source']|safe }}"></img>
           <div class="card-body">
-            <p href="{{data['titlelink']|safe}}" class="card-text">{{ data['title']|safe }}</p>
+            <br>
+            <a href="{{data['titlelink']|safe}}" class="card-text">{{ data['title']|safe }}</a>
+            <br>
+            <a>Harga : {{data['price']}}</a>
+            <br>
           </div>
         </div>
-        <br>
-      </div>
     {% endfor %}
-</div>
 {% endblock%}
