--- a/templates/scraping_detik.html
+++ b/templates/scraping_detik.html
@@ -2,9 +2,13 @@
 
 {% block body %}
   <h1>Latest Popular News (Scraping From detik.com)</h1>
-  {% for image in images %}
-  {{ image|safe }}
-  <a href="{{ image.find('a')['href']|safe}}">{{ image.find('img')['title']|safe}}</a>
-  <br/><br/><br/>
-  {% endfor %}
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    {% for image in images %}
+    <div class="col">
+      {{ image|safe }}
+      <a href="{{ image.find('a')['href']|safe}}">{{ image.find('img')['title']|safe}}</a>
+      <br/><br/><br/>
+    </div>
+    {% endfor %}
+  </div>
 {% endblock%}
